--- a/invoice.html
+++ b/invoice.html
@@ -167,10 +167,10 @@
                     </tr>
                     <tr>
                         <td align="right" style="padding: 5px;">
-                            + TAX    
+                            + VAT    
                         </td>
                         <td align="right" width="20%" style="padding: 5px;">
-                         0%
+                         0,00%
                         </td>
                     </tr>
                     <tr>
